--- a/main.scss
+++ b/main.scss
@@ -16,7 +16,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block; }
 
 body {
-  line-height: 1; }
+  line-height: 1;
+  font-family: Helvetica, sans-serif;
+  line-height: 1.5;
+}
+
+p {
+  margin-bottom: 1.5rem;
+}
 
 ol, ul {
   list-style: none; }
